# local-agentic-rag

./: .gitignore  README.md
plans/: agentic-rag-build-plan.md
services/api/: .env.example  pyproject.toml
services/api/app/: main.py  settings.py
services/api/app/openai_compat/: __init__.py  chat.py  models.py
