[project]
name = "agentic-rag-api"
version = "0.1.0"
description = "FastAPI OpenAI-compatible gateway for local agentic RAG"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "openai>=1.99.0",
  "httpx>=0.28.1",
]

[tool.uv]
package = false

